[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = ["Farid Ouedraogo, Marcel Stolin, Sebastiano Cassol, Jacopo Clocchiatti"]

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
unitn_market_2022 = { version = "1.0.10", registry = "kellnr" }
TASE = { version = "0.1.2", registry = "kellnr" }
ZSE = { version = "0.1.3", registry = "kellnr" }
smse = { version = "1.0.1", registry = "kellnr" }
SGX = { version = "0.1.4", registry = "kellnr" }
