[package]
name = "trader-cli"
version = "0.1.0"
edition = "2021"
authors = ["Marcel Stolin"]

[dependencies]
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
SGX = { version = "0.1.5", registry = "kellnr" }
smse = { version = "1.0.1", registry = "kellnr" }
TASE = { version = "0.1.2", registry = "kellnr" }
trader = { path = "../trader" }
unitn_market_2022 = { version = "1.0.10", registry = "kellnr" }
ZSE = { version = "0.1.3", registry = "kellnr" }
