[package]
name = "trader"
version = "0.1.0"
edition = "2021"
authors = ["Farid Ouedraogo, Marcel Stolin, Sebastiano Cassol, Jacopo Clocchiatti"]

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
unitn_market_2022 = { version = "1.0.10", registry = "kellnr" }

[dev-dependencies]
TASE = { version = "0.1.2", registry = "kellnr" }
ZSE = { version = "0.1.3", registry = "kellnr" }
smse = { version = "1.0.1", registry = "kellnr" }
SGX = { version = "0.1.3", registry = "kellnr" }
